#14 fix sonar code smells (#15)