@@ -5,7 +5,6 @@ import org.springframework.stereotype.Service;
 import pl.patrykbober.bloomer.user.dto.RoleDto;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,7 +16,7 @@ public class RoleService {
     public List<RoleDto> findAll() {
         return roleRepository.findAll().stream()
                 .map(roleMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
